samples/_failures_safe/1761653546_e1b48b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c16b5a81.c: In function ‘main’:
./samples/SAFE/__tmp_c16b5a81.c:174:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  174 |     struct Graph* graph
      |            ^~~~~
./samples/SAFE/__tmp_c16b5a81.c:174:12: error: expected declaration or statement at end of input
